working on the report

--- a/Rapport/biblio.bib
+++ b/Rapport/biblio.bib
@@ -19,4 +19,44 @@
   url       = {https://link.springer.com/article/10.1007%2Fs002110050002?LI=true},
 }
 
+@article{combettes,
+  title={Proximal splitting methods in signal processing},
+  author={Combettes, Patrick L and Pesquet, Jean-Christophe},
+  booktitle={Fixed-point algorithms for inverse problems in science and engineering},
+  pages={185--212},
+  year={2011},
+  publisher={Springer}
+}
+
+@article{parikh2014proximal,
+  title={Proximal algorithms},
+  author={Parikh, Neal and Boyd, Stephen and others},
+  journal={Foundations and Trends{\textregistered} in Optimization},
+  volume={1},
+  number={3},
+  pages={127--239},
+  year={2014},
+  publisher={Now Publishers, Inc.}
+  
+@article{browder1965nonexpansive,
+  title={Nonexpansive nonlinear operators in a Banach space},
+  author={Browder, Felix E},
+  journal={Proceedings of the National Academy of Sciences},
+  volume={54},
+  number={4},
+  pages={1041--1044},
+  year={1965},
+  publisher={National Acad Sciences}
+}
+
+@book{brezis1973ope,
+  title={Ope¦ rateurs maximaux monotones et semi-groupes de contractions dans les espaces de Hilbert},
+  author={Brezis, Haim},
+  volume={5},
+  year={1973},
+  publisher={Elsevier}
+}
+
+
+
 @Comment{jabref-meta: databaseType:bibtex;}
