--- a/Rapport/rapport.tex
+++ b/Rapport/rapport.tex
@@ -50,7 +50,14 @@ language=Matlab,
 \newpage
 \section{Introduction}
 Le problème de transport optimal fut étudié dans sa forme primitive par \emph{Gaspard Monge} dans son \emph{Mémoire sur la théorie des déblais et des remblais} de 1871 \cite{monge}. Il s'intéressait au déplacement de tas de matériaux d'un site d'extraction à un site de construction en minimisant le coût de transport (le coût de déplacement d'une unité est le produit de la charge déplacée par la distance). \\
-La formulation moderne a été introduite par \emph{Leonid Kantorovitch}, prix Nobel d'économie en 1975 pour sa contribution aux allocations optimales.  
+La formulation moderne a été introduite par \emph{Leonid Kantorovitch}, prix Nobel d'économie en 1975 pour sa contribution aux allocations optimales.  \\
+
+
+Nous essaierons d'être le plus exhaustif possible dans la présentation des résultats, la plupart des énoncés seront démontrés. 
+
+
+
+Le plan de rapport est le suivant, nous commencerons par présenté les notions liées au transport optimal, puis nous ferrons un court aparté sur les opérateurs proximaux. Enfin, Nous attaquerons la discrétisation et la mise en œuvre numérique. 
 \newpage
 
 \section{Notions générales}
@@ -182,11 +189,316 @@ ce qui achève la preuve.
 
 
 
+\newpage
+\section{Opérateurs proximaux}
+L'opérateur proximal d'une fonction convexe généralise la notion de projection sur un ensemble convexe. Cette notion fût introduite pour répondre aux problèmes de minimisation de fonctions non nécessairement différentiables. 
+
+Suivant la présentation de \emph{P.L. Combettes \emph{et} JC. Pesquet} \cite{combettes} nous présentons une série de résultats sur les opérateurs proximaux, en complétant quelques preuves.
+\paragraph{Notation :}Le domaine d'une fonction $f:\ \RR^n\longrightarrow\ ]-\infty,+\infty]$ est $\mathcal{D}(f) = \{ x\in\RR^n\ |\ f(x) < +\infty \} $. Notons $\Gamma_0(\RR^n)$ l'ensemble des fonctions convexes semi-continues inférieurement à valeurs dans $]-\infty,+\infty]$ telles que $\mathcal{D}(f) \neq \emptyset$. 
+
+\begin{definition}{Sous - différentiel}
+Soit $f\in\Gamma_0(\RR^n)$, le sous - différentiel de $f$ est l'application suivante,
+$$
+\fonction{\partial f}{\RR^n}{\mathcal{P}(\RR^n)}{x}{\left\{ u\in\RR^n\ |\ \forall y\in\RR^n,\ \langle u,y-x\rangle +f(x)\leq f(y) \right\}}
+$$ 
+Avec $\mathcal{P}(\RR^n)$, l'ensemble des parties de $\RR^n$.
+\end{definition}
+
+
+L'interprétation géométrique du sous-différentiel est la suivante. Il est formé par toutes les directions des hyperplan qui passent par le point $(x,f(x))$ et restent "sous" le graphe de la fonction $f$. \\
+
+\exemple{Calculons le sous différentiel en tout point de 
+$$
+\fonction{f}{\RR}{\RR^+}{x}{|x|}
+$$
+Considérons deux cas, 
+\begin{enumerate}
+\item $\mathrm{x>0}$, le cas $x<0$ est identique. Soit une direction $u$ appartient au sous différentiel de $f$ en x, alors $\forall y\in \RR$ : 
+\begin{align*}
+u(y-x) + f(x) \leq f(y)\\
+u(y-x) + x \leq f(y)\\
+\end{align*}
+En particulier, pour $y = 0$ on obtient $x(1-u) \leq 0$, ainsi $u\geq 1$. Et donc en prenant $y > x$ (en particulier, $y>0$) on obtient $u(y-x) + x \geq y$ ce qui est contraire à notre définition sauf si $u=1$. 
+\item $\mathrm{x=0}$ Soit $u\in \partial f(0)$, alors $u$ doit vérifier pour tout $y\in \RR$,
+\begin{align*}
+uy\leq |y|
+\end{align*}
+En prenant $y>0$ on obtient que $u\leq 1$ et en prenant $y<0$, on a $u\geq -1$.
+\end{enumerate}
+En somme, 
+$$
+\partial f(x) =
+\left\{
+\begin{array}{cc}
+\{-1\} & x <0 \\
+\left[-1,1\right] & x =0\\
+\{1\} & x>0\\
+\end{array}
+\right.
+$$
+Ce qui correspond bien à l'interprétation géométrique donnée et à la figure \ref{fig:subgradient}.
+\begin{figure}[!h]
+\centering
+\includegraphics[scale=0.7]{img/sub_gradient.png}
+\caption{\label{fig:subgradient}Illustration du sous - différentiel de $|x|$ en $0$}
+\end{figure}
+}
+
+\begin{propriete}
+Soit $f\in\Gamma_0(\RR^n)$. Si $f$ est différentiable sur son domaine, alors 
+$$
+\forall x\in \mathcal{D}(f)^{\circ},\ \partial f(x) = \{\nabla f(x)\}
+$$
+\end{propriete}
+\begin{preuve}
+Comme une $f$ est convexe différentiable, nous avons la caractérisation suivante du gradient : 
+$$
+\forall x,y\in\RR^n,\quad \langle \nabla f (x) ,y-x\rangle +f(x) \leq f(y)
+$$
+qui implique que $\nabla f(x) \in\partial f(x)$.\\
+Supposons à présent que $p\in\partial f(x)$. Soit une suite $y_n^1$ de $\RR^n$ qui tend vers x. Écrivons, $y_n^1=x+k_n$ avec $\|k_n\|\rightarrow 0$. Posons alors $y_n^2$ une seconde suite de $\RR^n$ telle que $y_n^2= x-k_n$, alors : 
+$$
+\left\{
+\begin{array}{cc}
+\langle p, k_n\rangle &\leq f(x +k_n) - f(x) \\
+\langle p,-k_n\rangle & \leq f(x-k_n)-f(x) \\
+\end{array}
+\right.
+$$
+Comme $f$ est différentiable dans son domaine, on peut écrire, 
+$$
+f(x\pm k_n)=f(x) \pm \langle \nabla f(x), k_n\rangle
+$$
+Ainsi, nous obtenons
+$$
+\left\{
+\begin{array}{cc}
+\langle p, k_n\rangle &\leq \langle \nabla f(x), k_n\rangle \\
+\langle p, k_n\rangle &\geq \langle \nabla f(x), k_n\rangle \\
+\end{array}
+\right.
+$$
+Ainsi $\langle p,k_n \rangle = \langle \nabla f(x),k_n\rangle$. En faisant tendre $n$ vers $+\infty$, comme la suite $k_n$ converge fortement vers $0$, elle va aussi converger faiblement. Ce qui implique que $p=\nabla f(x)$. 
+\end{preuve}
+Cette propriété est cohérente avec l'exemple précédent, $\partial f(x) =f'(x)$ partout où, $f$ est différentiable, c'est à dire $x\neq 0$. 
+
+\begin{propriete}
+Si $f = \alpha f_1+\beta f_2$, avec $f_1,\ f_2\in\Gamma_0(\RR^n)$ et $\alpha,\ \beta \geq 0$. Alors 
+\begin{align*}
+\partial f(x) &= \alpha \partial f_1(x) + \beta \partial f_2(x) \\
+&= \left\{u\in\RR^n\ |\ \exists (u_1,u_2)\in \partial f_1(x)\times f_2(x),\ u = \alpha u_1 + \beta u_2 \right\}
+\end{align*}
+\end{propriete}
+\begin{preuve}
+\vspace{-1cm}
+\paragraph{$\alpha\partial f_1(x) +\beta \partial f_2(x) \subset
+\partial (\alpha f_1 +\beta f_2)(x)$ :}$u\in\RR^n$ est dans $\partial (\alpha f_1 +\beta f_2)(x)$ si et seulement si pour tout $y\in \RR^n$, nous avons 
+$$
+\langle u,y-x\rangle + \alpha f_1(x) +\beta f_2(x) \leq  \alpha f_1(y) +\beta f_2(y) 
+$$
+En particulier en prenant $u\in \alpha\partial f_1(x) +\beta \partial f_2(x) $, au sens donné dans la propriété, cette inégalité est vérifiée. 
+
+\paragraph{$\alpha\partial f_1(x) +\beta \partial f_2(x) \supset
+\partial (\alpha f_1 +\beta f_2)(x)$ :}Soit $u\in\partial (\alpha f_1 +\beta f_2)(x)$, par contradiction, supposons que  $u\ni \alpha\partial f_1(x) +\beta \partial f_2(x)$, c'est à dire : 
+$$
+\forall (u_1,u_2)\in \partial f_1(x) \times \partial f_2(x),\quad u\neq \alpha u_1+\beta u_2
+$$
+{\Huge EMPTY}
+\end{preuve}
+
+
+La notion de sous - différentiel est centrale car il permet de caractériser les minimiseurs d'une fonctions (même non différentiable).
+\begin{theoreme}{}
+Soit $f\in\Gamma_0(\RR^n)$. Le point $x^{\star}\in\RR^n$ est un point de minimum global de $f$ si et seulement si 
+$$
+0\in \partial f(x^{\star})
+$$ 
+\end{theoreme}
+\begin{preuve}
+\vspace{-1cm}
+\paragraph{$\Rightarrow$} Soit $x^{\star}$ le minimum global de $f$ alors $\forall y\in \RR^n$ :
+\begin{align*}
+f(x^{\star}) &\leq f(y)\\
+\langle 0,y-x\rangle +f(x^{\star}) &\leq f(y)\\
+\end{align*}
+Et donc $0\in \partial f(x^{\star})$. 
+\paragraph{$\Leftarrow$} Si $0\in \partial f(x^{\star})$ alors $\forall y\in \RR^n$ :
+\begin{align*}
+\langle 0,y-x^{\star}\rangle + f(x^{\star}) &\leq f(y)\\
+f(x^{\star}) \leq f(y) 
+\end{align*}
+et $x^{\star}$ est un minimum global de $f$. 
+\end{preuve}
+
+L'opérateur proximal est un outil important dans l'optimisation de fonctions convexes non différentiables. C'est une application minimisant une fonction fortement convexe dépendant de la fonction originale $f$. En trouvant un compormis entre trouver le minimum de la fonction non différentaible $f$ et en forçant une proximité avec l'argument, nous approchons le minimum de $f$. 
+
+\begin{definition}{Opérateur proximal}
+Soit $f\in\Gamma_0(\RR^n)$. L'opérateur proximal de $f$ est noté $prox_f$ et il est défini pour tout $x\in\RR^n$ par : 
+$$
+prox_f(x) = \argmin_{y\in\RR^n} f(y) +\frac{1}{2}\|x-y\|^2
+$$
+\end{definition}
+\exemple{Prenons, l'indicatrice d'un ensemble convexe non vide $C$ : 
+$$
+\mathrm{i}_C = \left\{
+\begin{array}{cc}
+0 & x\in C\\
++\infty & x \notin C
+\end{array}
+\right.
+$$
+Alors, 
+\begin{align*}
+prox_{\mathrm{i}_C}(x) &= \arg \min_{y\in\RR^n} \mathrm{i}_C(y) + \frac{1}{2}\|x-y\|^2\\
+&= \arg\min_{y\in C} \frac{1}{2}\|x-y\|^2\\
+&= \mathrm{P}_C (x)\\ 
+\end{align*}
+Où, $\mathrm{P}_C$ désigne la projection orthogonale sur $C$. 
+}\\
+Sur la figure \ref{fig:proximal} (tirée de \cite{parikh2014proximal}), nous avons en \textbf{gras} la frontière de la fonction $f$, les lignes fines sont les lignes de niveaux de $f$. Évaluer $prox_f$ sur les points bleus les associent aux points rouges correspondant. Les trois points dans le domaine restent dans le domaine et se déplacent vers le minimum, et les deux à l'extérieur du domaine se placent que la frontière de celui-ci en direction du minimum. 
+\begin{figure}[!h]
+\centering
+\includegraphics[scale=0.7]{img/proximal.png}
+\caption{\label{fig:proximal}Illustration de l'opérateur proximal}
+\end{figure}
+Un scalaire $\gamma >0 $ peut être introduit dans cette définition $prox_{\gamma f}$, ce paramètre contrôle le poids apporté à la minimisation de $f$. Un $\gamma$ grand, forcera de se rapprocher fortement du minimum de $f$, alors qu'un $\gamma$ petit favorisera les points proches de $x$. Le résultat important est le suivant. 
+\begin{propriete}
+Soit une fonction $f$ convexe semi continue inférieurement. Alors, $prox_f(x)$ existe et est unique pour tout $x\in\RR^n$. De plus, il est caractérisé par : 
+$$
+\forall (x,p)\in \RR^n\times\RR^n\quad p=prox_fx\quad\Longleftrightarrow\quad x-p\in\partial f(p)
+$$
+En particulier, si $f$ est différentiable alors : 
+$$
+\forall (x,p)\in \RR^n\times\RR^n\quad p=prox_fx\quad \Longleftrightarrow \quad x-p=\nabla f(p)
+$$
+\end{propriete}
+\begin{preuve}
+$\forall x \in \RR^n$, la fonction $g\ :\ y \rightarrow f(y) +\frac{1}{2}\|x-y\|^2$ est strictement convexe et dans $\Gamma_0(\RR^n)$ (i.e. identiquement égale à $+\infty$). Ce qui montre que le minimum de $g$ est toujours atteint. 
+
+
+\paragraph{$\Leftarrow$} Supposons que $x-p\in\partial f(p)$. Alors, pour tout $y\in\RR^n$, nous avons 
+$$
+\langle x-p,y-p\rangle +f(p) \leq f(y)
+$$
+Or,
+\begin{align*}
+\langle x-p,y-p\rangle &= \frac{1}{2}\langle x-p,y-x+x-p\rangle + \frac{1}{2}\langle  x-y+y-p,y-p\rangle\\
+&=\frac{1}{2} \|x-p\|^2 + \frac{1}{2}\|y-p \|^2 +\frac{1}{2}\left( \langle x-p,y-x\rangle + \langle x-y,y-p\rangle\right)\\
+&= \frac{1}{2} \|x-p\|^2 + \frac{1}{2}\|y-p \|^2 -\frac{1}{2}\|x-y\|^2
+\end{align*}
+Ainsi,
+\begin{align*}
+\frac{1}{2} \|x-p\|^2 + \frac{1}{2}\|y-p \|^2 -\frac{1}{2}\|x-y\|^2 + f(p) &\leq f(y) \\
+\frac{1}{2} \|x-p\|^2 + f(p) &\leq f(y) + \frac{1}{2}\|x-y\|^2\\
+\end{align*}
+Donc $p=prox_f(x)$.
+\paragraph{$\Rightarrow$} Soit $(x,p)\in \RR^n\times\RR^n$ telle que $p=prox_f(x)$. Alors $\forall y\in\RR^n$,
+{\Huge je me demande si c'est pas eja prouvé}
+\end{preuve}
+ 
+De plus, 
+\begin{propriete}
+Le point $x^{\star}$ minimise $f$ si et seulement si 
+$$
+x^{\star} = prox_f(x^{\star})
+$$
+\end{propriete} 
+\begin{preuve}
+\vspace{-1cm}
+\paragraph{$\Rightarrow$} Supposons que $x^{\star}$ minimise $f$ alors, comme $\|x^{\star}-y\|^2 > 0$ si $y\neq x^{\star}$. Nous avons $prox_f(x^{\star}) = x^{\star}$.
+\paragraph{$\Leftarrow$} Utilisons la caractérisation de minimisation donnée par le sous - différentiel. Le point $\tilde{x}$ minimise $f(x) +\frac{1}{2}\|x-v\|^2$, c'est à dire $\tilde{x} = prox_f(v)$, si et seulement si 
+$$
+0\in \partial f(\tilde{x}) + (\tilde{x}-v)
+$$
+Ou la somme est entendu au sens de la somme entre un ensemble et un singleton. \\
+En prenant $x^{\star} = v=\tilde{x}$, nous obtenons $0\in\partial f(x^{\star})$. Et donc $x^{\star}$ minimise $f$.
+\end{preuve}
+
+Cela suggère des algorithmes de point fixes. Cela fonctionnerait si $prox_f$ était une contraction (i.e. c-lipschitzienne, $0<c<1$). Ce n'est pas le cas, cependant nous avons une propriété de non expansivité qui est suffisante pour une itération de point fixe : 
+$$
+\|prox_f(x)-prox_f(y)\|^2\leq \langle prox_f(x)-prox_f(y),x-y\rangle
+$$
+C'est un cas particulier d'opérateur non expansif (comme par exemple, $-Id$ ou les rotations, \cite{browder1965nonexpansive,brezis1973ope}). 
+\begin{definition}{Application non expansive}
+Une application $N:\ \RR^n\rightarrow \RR^n$ est dite non expansive si 
+$$
+\forall (x,y)\in\RR^n\times\RR^n,\quad \|N(x)-N(y)\| \leq \|x-y\|
+$$
+C'est à dire que $N$ est 1-lipschitzienne. Nous avons la caractérisation suivante : 
+$$
+\forall (x,y)\in\RR^n\times\RR^n,\quad \|N(x)-N(y)\|^2 \leq  \langle N(x)-N(y),x-y\rangle
+$$
+\end{definition}
+
+Si $N$ est un opérateur non expansif alors $\forall \alpha \in ]0,1[$ l'opérateur $T = (1-\alpha)I + \alpha N$ a les mêmes poinst fixes que $N$, et qu'en itérant $T$, il y a convergence vers les poinst fixes. C'est à dire, la suite 
+$$
+x_{n+1} = (1-\alpha )x_n +N(x_n)
+$$
+converge vers un point fixe de $N$.
 
 
 
 
 
+ 
+Soit le problème de minimisation: \\
+
+\fbox{
+  \parbox{\textwidth}{
+  Soient $f_1$ et $f_2$ deux fonctions de $\Gamma_0(\RR^n)$ telles que $f_1+f_2\in\Gamma_0(\RR^n)$, en particulier le support de $f_1+f_2$ est non vide. Supposons que
+  $$
+  \lim_{\|x\|\rightarrow+\infty} f_1(x)+f_2(x) =+\infty
+  $$
+Considérons alors le problème de minimisation, 
+Trouver $x\in\RR^n$ qui réalise le 
+\begin{align}
+\min_{x\in\RR^n}f_1(x)+f_2(x)
+\label{eq:pbmminimi}
+\end{align}
+  }
+}
+
+\begin{propriete}
+Le problème \ref{eq:pbmminimi} admet une unique solution et pour $\forall \gamma >0$, elle est caractérisée par :
+$$
+\left\{
+\begin{array}{rcl}
+x &= & prox_{\gamma f_2} y \\
+prox_{\gamma f_2}y &= & prox_{\gamma f_1}(2prox_{\gamma f_2}y -y)
+\end{array}
+\right.
+$$
+\end{propriete}
+
+\begin{preuve}
+$f_1+f_2$ est une fonction convexe, infinie à l'infini donc l'existence est l'unicité du minimiseur est immédiate.
+\end{preuve}
+
+Suivant les idées d'algorithmes de point fixes sur les opérateurs proximaux, nous aintroduisons l'algorithme suivant dit de \emph{Douglas - Rachford}.
+\begin{algorithm}
+\caption{Douglas-Rachford}
+\begin{algorithmic}
+\STATE Soit $\epsilon \in ]0,1[,\ \gamma >0,\ y_0\in \RR^n$
+\FOR{$n=0,\ 1,\ \ldots$}
+\STATE $x_n = prox_{\gamma f_2} y_n$
+\STATE $\lambda_n \in [\epsilon,2-\epsilon]$
+\STATE $y_{n+1} = y_n + \lambda_n(prox_{\gamma f_1} (2x_n-y_n)-x_n)$
+\ENDFOR
+\end{algorithmic}
+\end{algorithm}
+
+\begin{propriete}
+Toute suite $(x_n)$ générée par l'algorithme de Douglas - Rachford converge vers une solution du problème \ref{eq:pbmminimi}.
+\end{propriete}
+
+
+
+
+
+
+
+
+\newpage
 \section{Pbm de transport optimal}
 Soient deux densités $f_0$ et $f_1$ de même masse, suffisamment régulière, sur un domaine $[0,1]^d$.\\
 Un transport de $f_0$ sur $f_1$ est une application $T$ telle que :
