working on theory part

--- a/Rapport/rapport.tex
+++ b/Rapport/rapport.tex
@@ -58,6 +58,19 @@ Nous essaierons d'être le plus exhaustif possible dans la présentation des ré
 
 
 Le plan de rapport est le suivant, nous commencerons par présenté les notions liées au transport optimal, puis nous ferrons un court aparté sur les opérateurs proximaux. Enfin, Nous attaquerons la discrétisation et la mise en œuvre numérique. 
+{\Huge Plan : \\
+1 - Théorie sur le transport optimal \\
+2 - Théorie sur les opérateurs proximaux  \\
+3 - Numérique \\
+	3.1 - Idées générales de l'implémentation \\
+	3.2 - Implémentation Grosse matrice \\
+	3.3 - Implemetation centrée \\
+		3.3.1 - 1D \\
+		3.3.2 - 2D \\
+	3.4 - Implementation staggered FFT \\
+4 - Galerie du Fun \\
+
+}
 \newpage
 
 \section{Notions générales}
