--- a/Rapport/rapport.tex
+++ b/Rapport/rapport.tex
@@ -154,7 +154,7 @@ v(t,x)\ :&\ \RR\times\RR^n\rightarrow \RR^n \quad \text{champ de vecteurs vitess
 \end{align*}
 et 
 \begin{align}
-C_v=\left\{(f,v) | \frac{\partial f}{\partial t} + \text{div}_x (fv) =0,\ f(0,\cdot) = f_0,\ f(1,\cdot)=f_1 \right\}
+C_v=\left\{(f,v)\ |\ \frac{\partial f}{\partial t} + \text{div}_x (fv) =0,\ f(0,\cdot) = f_0,\ f(1,\cdot)=f_1 \right\}
 \label{eq:contraintes}
 \end{align}
 \end{theoreme}
