--- a/Rapport/biblio.bib
+++ b/Rapport/biblio.bib
@@ -57,6 +57,13 @@
   publisher={Elsevier}
 }
 
-
+@book{Didon,
+  title={Autour des in{\'e}galit{\'e}s isop{\'e}rim{\'e}triques},
+  author={Figalli, A.},
+  isbn={9782730215732},
+  url={https://books.google.fr/books?id=xjcjkuF\_qnoC},
+  year={2011},
+  publisher={{\'E}ditions de l'Ecole polytechnique}
+}
 
 @Comment{jabref-meta: databaseType:bibtex;}
